syntax = "proto3";

option go_package = "github.com/gangtao/candy/protobuf";


service Configuration {
    rpc GetConfig(ConfigRequest) returns (ConfigItem) {}
    rpc PublishConfig(PublishConfigRequest) returns (PublishConfigResponse) {}
    rpc DeletesConfig(ConfigRequest) returns (DeleteConfigResponse) {}
    rpc MonitorConfig(ConfigRequest) returns (stream ConfigItem) {}
}

message ConfigRequest {
    // The configuration id or key.
    string dataId = 1;

    // The point where the feature is detected.
    string group = 2;

    // Timeout.
    int32 timeout = 3;
}

message ConfigItem {
    // The content of the configuration.
    string content = 1;
}

message PublishConfigRequest {
    // The configuration id or key.
    string dataId = 1;

    // The point where the feature is detected.
    string group = 2;

    // Content of the config.
    string content = 3;
}

message PublishConfigResponse {
    // The result of configuration publish
    bool result = 1;
}

message DeleteConfigResponse {
    // The result of configuration deletion
    bool result = 1;
}